--- a/src/main/resources/templates/admin/fragments-Admin.html
+++ b/src/main/resources/templates/admin/fragments-Admin.html
@@ -142,9 +142,14 @@
 
                 <ul class="submenu">
                     <li class="">
-                        <a href="#" class="dropdown-toggle">
-                            <i class="menu-icon fa fa-caret-right"></i>
-                                Loại sản phẩm
+
+<!--                        <a href="#" class="dropdown-toggle">-->
+<!--                            <i class="menu-icon fa fa-caret-right"></i>-->
+<!--                                Loại sản phẩm-->
+<!--                        </a>-->
+
+                        <a th:href="@{/admintest/category}" class="dropdown-toggle">
+                            <i class="menu-icon fa fa-caret-right"></i> Tên sản phẩm
                         </a>
 
                         <b class="arrow"></b>
