thêm chức năng thêm, sửa sản phẩm cho admin

--- a/src/main/resources/templates/admin/fragments-Admin.html
+++ b/src/main/resources/templates/admin/fragments-Admin.html
@@ -152,7 +152,7 @@
                     </li>
 
                     <li class="">
-                        <a href="typography.html">
+                        <a href="/manage-product">
                             <i class="menu-icon fa fa-caret-right"></i>
                            Sản phẩm
                         </a>
