--- a/src/main/resources/templates/shop-grid.html
+++ b/src/main/resources/templates/shop-grid.html
@@ -305,7 +305,7 @@
                                 </a>
                                 <div class="product__item__text">
                                     <h6><a href="#" th:text="${product.productName}"></a></h6>
-                                    <h5 th:text="${product.productPrice}" ></h5>
+                                    <h5  ><span th:text="${product.productPrice}"/> VND</h5>
                                 </div>
                             </div>
                         </div>
