--- a/src/main/resources/templates/admin/adminindex.html
+++ b/src/main/resources/templates/admin/adminindex.html
@@ -14,7 +14,7 @@
             	
             	
             	<!-- Sửa ở đây -->
-            	<div th:fragment="tableProduct">
+            	<!-- <div th:fragment="tableProduct">
 
                  <div class="modal-content" id="servers_modal">
                     <div class="modal-header">
@@ -57,7 +57,7 @@
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button></div>
                         </div>
                     </div>
-                </div> 
+                </div>  -->
 				<!-- Kết thúc sửa ở đây -->
 				
 				
