--- a/src/main/resources/templates/admin/fragments-Admin.html
+++ b/src/main/resources/templates/admin/fragments-Admin.html
@@ -66,7 +66,7 @@
         </button>
 
         <div class="navbar-header pull-left">
-            <a href="index.html" class="navbar-brand">
+            <a th:href="@{/admin}" class="navbar-brand">
                 <small>
                     <i class="fa fa-leaf"></i>
                     Quản lý
@@ -173,7 +173,7 @@
                     <li class="">
                         <a th:href="@{/admin/order}">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Quản lý đơn hàng
+                            Đơn hàng
                         </a>
 
                         <b class="arrow"></b>
