--- a/src/main/resources/templates/admin/order-detail.html
+++ b/src/main/resources/templates/admin/order-detail.html
@@ -23,6 +23,7 @@
 						<div class="modal-header">
 							<div class="table-wrapper">
 								<div class="table-title">
+									<h1>Chi tiết hóa đơn</h1>
 									<a th:href="@{/admin/order}">
 										<button type="button" class="btn btn-primary">
 											<i class="fa fa-backward"></i> Trở về trang quản lý order
@@ -53,6 +54,7 @@
 											<td></td>
 											<td></td>
 											<td></td>
+
 											<td>Tổng tiền: [[${totalPrice}]] VNĐ</td>
 										</tr>
 									</tbody>
