fix loi merged code

--- a/src/main/resources/templates/shop-details.html
+++ b/src/main/resources/templates/shop-details.html
@@ -38,7 +38,7 @@
 
                         <div class="product__details__pic__item">
                             <img class="product__details__pic__item--large"
-                                 th:src="@{'/img/guitar/' + ${product.productImage}}" alt="">
+                                 th:src="@{'' + ${product.productImage}}" alt="">
                         </div>
 
 
