--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -37,7 +37,7 @@
       </div>
       <div class="humberger__menu__cart">
         <ul>
-          <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+          <li><a th:href="@{/shoping-cart}"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
         </ul>
         <div class="header__cart__price">item: <span>$150.00</span></div>
       </div>
@@ -229,7 +229,8 @@
 
         <div class="row featured__filter">
           <div class="col-lg-3 col-md-4 col-sm-6 mix oranges guitar">
-            <div  class="featured__item">
+<!--            thử nghiệm-->
+            <div th:action="@{/add-to-cart}" th:method="post" class="featured__item">
               <a th:href="@{/shop-details}" >
                 <img class="featured__item__pic set-bg" th:src="@{/img/guitar/cordoba-C1M-CE-01-450x471.jpg}">
               </a>
