--- a/src/main/resources/templates/shoping-cart.html
+++ b/src/main/resources/templates/shoping-cart.html
@@ -27,11 +27,16 @@
     <!-- Breadcrumb Section End -->
 
     <!-- Shoping Cart Section Begin -->
-    <section class="shoping-cart spad">
+    <section class="shoping-cart spad" >
+<!--        Kiểm tra xem sản phẩm có trong giỏ hàng hay không-->
+        <div th:if="${check}" class="text-center alert-warning">
+            <p th:text="${check}"></p>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="shoping__cart__table">
+<!--                    kiểm tra xem có sản phẩm trong giỏ hàng hay không-->
+                    <div class="shoping__cart__table" th:if="${check==null}">
                         <table>
                             <thead>
                                 <tr>
@@ -39,72 +44,40 @@
                                     <th>Đơn giá</th>
                                     <th>Số lượng</th>
                                     <th>Thành tiền</th>
-                                    <th></th>
+                                    <th>Xóa</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
+                            <tbody >
+
+                                <tr th:each="cartItem: ${shoppingcart.cartItems}">
                                     <td class="shoping__cart__item">
-                                        <img th:src="@{/img/guitar/cordoba-C1M-CE-01-450x471.jpg}" alt="" width="150" height="150">
-                                        <h5>Cordoba C1M CE</h5>
+                                        <img th:src="${cartItem.product.productImage}" alt="" width="150" height="150">
+                                        <h5 th:text="${cartItem.product.productName}"></h5>
                                     </td>
-                                    <td class="shoping__cart__price"> 1.000.000 VNĐ</td>
+                                    <td class="shoping__cart__price" th:text="${cartItem.product.productPrice}+' VNĐ'"></td>
+
+                                    <form th:action="@{/update-cart}" method="post">
+
+                                        <input type="hidden" name="id" th:value="${cartItem.product.id}">
                                     <td class="shoping__cart__quantity">
                                         <div class="quantity">
                                             <div class="pro-qty">
-                                                <input type="text" value="1">
+                                                <input type="number" name="quantity" step="1"
+                                                       min="0" th:value="${cartItem.quantity}">
                                             </div>
                                         </div>
                                     </td>
-                                    <td class="shoping__cart__total"> 1.000.000 VNĐ</td>
-                                    <td class="shoping__cart__item__close">
-                                        <span class="icon_close"></span>
+                                    <td class="shoping__cart__total" th:text="${cartItem.totalPrice}+' VNĐ'"> </td>
+                                   <td class="shoping__cart__item__close">
+                                       <button type="submit" name="action" value="update" title="Update">Cập nhật</button>
+                                       <button type="submit" name="action" value="delete" title="Delete"
+                                               class="btn btn-warning">Xóa
+                                       </button>
                                     </td>
+
+                                    </form>
                                 </tr>
-                                <tr>
-                                    <td class="shoping__cart__item">
-                                        <img src="../../../../../../../IMusic/img/guitar/Kapok-D-118AC-1-400x400-450x471.jpg" alt="" width="150" height="150">
-                                        <h5>Kapok D 118AC</h5>
-                                    </td>
-                                    <td class="shoping__cart__price">
-                                        1.000.000 VNĐ
-                                    </td>
-                                    <td class="shoping__cart__quantity">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="1">
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="shoping__cart__total">
-                                        1.000.000 VNĐ
-                                    </td>
-                                    <td class="shoping__cart__item__close">
-                                        <span class="icon_close"></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="shoping__cart__item">
-                                        <img src="../../../../../../../IMusic/img/guitar/Suzuki-SDG-6NL-1-270x270-450x471.jpg" alt="" width="150" height="150">
-                                        <h5>Suzuki SDG 6NL</h5>
-                                    </td>
-                                    <td class="shoping__cart__price">
-                                        1.000.000 VNĐ
-                                    </td>
-                                    <td class="shoping__cart__quantity">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="1">
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="shoping__cart__total">
-                                        1.000.000 VNĐ
-                                    </td>
-                                    <td class="shoping__cart__item__close">
-                                        <span class="icon_close"></span>
-                                    </td>
-                                </tr>
+
                             </tbody>
                         </table>
                     </div>
@@ -112,11 +85,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <!-- <div class="shoping__cart__btns">
+                   <div class="shoping__cart__btns">
                         <a href="./shop-grid.html" class="primary-btn cart-btn">Tiếp tục mua sắm</a>
                         <a href="#" class="primary-btn cart-btn cart-btn-right"><span class="icon_loading"></span>
                             Upadate Cart</a>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="shoping__continue">
