fix update categories

--- a/src/main/resources/templates/admin/adminindex.html
+++ b/src/main/resources/templates/admin/adminindex.html
@@ -12,12 +12,12 @@
 		<div th:replace="admin/fragments-Admin::main-content-inner"></div>
 
 		<!-- Sửa ở đây -->
-		<div th:fragment="tableProduct">
-			<a th:href="@{/admintest/category}" class="dropdown-toggle">
-				<i class="menu-icon fa fa-caret-right"></i> Loại sản phẩm
-			</a>
-			<b class="arrow"></b>
-		</div>
+<!--		<div th:fragment="tableProduct">-->
+<!--			<a th:href="@{/admintest/category}" class="dropdown-toggle">-->
+<!--				<i class="menu-icon fa fa-caret-right"></i> Loại sản phẩm-->
+<!--			</a>-->
+<!--			<b class="arrow"></b>-->
+<!--		</div>-->
 		<!-- Kết thúc sửa ở đây -->
 
 	</div>
