--- a/src/main/resources/templates/admin/fragments-Admin.html
+++ b/src/main/resources/templates/admin/fragments-Admin.html
@@ -157,9 +157,9 @@
                     </li>
 
                     <li class="">
-                        <a href="typography.html">
+                        <a th:href="@{/admintest/category}">
                             <i class="menu-icon fa fa-caret-right"></i>
-                           Sản phẩm
+                           Loại sản phẩm
                         </a>
 
                         <b class="arrow"></b>
