"cap nhat lan 10, thêm sản phẩm vào giỏ hàng"

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -67,7 +67,7 @@
       </div>
       <div class="humberger__menu__contact">
         <ul>
-          <li><i class="fa fa-envelope"></i> Istrument@gmail.com</li>
+          <li><i class="fa fa-envelope"></i> Imusic@gmail.com</li>
         </ul>
       </div>
     </div>
@@ -125,7 +125,11 @@
             <div class="header__cart">
               <ul>
                 <!-- <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li> -->
-                <li><a th:href="@{/shoping-cart}"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                <li><a th:href="@{/shoping-cart}"><i class="fa fa-shopping-bag"></i>
+
+                  <span th:text="${session.totalItems == null} ? '0':${session.totalItems}"></span>
+
+                </a></li>
               </ul>
               <div class="header__cart__price">item: <span>$150.00</span></div>
             </div>
