--- a/src/main/resources/templates/shoping-cart.html
+++ b/src/main/resources/templates/shoping-cart.html
@@ -44,7 +44,7 @@
                                     <th>Đơn giá</th>
                                     <th>Số lượng</th>
                                     <th>Thành tiền</th>
-                                    <th>Xóa</th>
+                                    <th>Thao tác</th>
                                 </tr>
                             </thead>
                             <tbody >
@@ -59,20 +59,24 @@
                                     <form th:action="@{/update-cart}" method="post">
 
                                         <input type="hidden" name="id" th:value="${cartItem.product.id}">
-                                    <td class="shoping__cart__quantity">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="number" name="quantity" step="1"
-                                                       min="0" th:value="${cartItem.quantity}">
+                                        <td class="shoping__cart__quantity" >
+                                            <div class="quantity" data-cart-item>
+                                                <div class="pro-qty">
+
+
+                                                    <input type="number" name="quantity" step="1" min="0" th:value="${cartItem.quantity}">
+
+                                                </div>
                                             </div>
-                                        </div>
-                                    </td>
-                                    <td class="shoping__cart__total" th:text="${cartItem.totalPrice}+' VNĐ'"> </td>
+                                        </td>
+
+
+
+                                        <td class="shoping__cart__total" th:text="${cartItem.totalPrice}+' VNĐ'"> </td>
                                    <td class="shoping__cart__item__close">
                                        <button type="submit" name="action" value="update" title="Update">Cập nhật</button>
                                        <button type="submit" name="action" value="delete" title="Delete"
-                                               class="btn btn-warning">Xóa
-                                       </button>
+                                               class="btn btn-warning">Xóa</button>
                                     </td>
 
                                     </form>
@@ -86,9 +90,8 @@
             <div class="row">
                 <div class="col-lg-12">
                    <div class="shoping__cart__btns">
-                        <a href="./shop-grid.html" class="primary-btn cart-btn">Tiếp tục mua sắm</a>
-                        <a href="#" class="primary-btn cart-btn cart-btn-right"><span class="icon_loading"></span>
-                            Upadate Cart</a>
+<!--                        <a th:href="@{/shop-grid}" class="primary-btn cart-btn">Tiếp tục mua sắm</a>-->
+<!--                        <a href="#" class="primary-btn cart-btn cart-btn-right"><span class="icon_loading"></span> Upadate Cart</a>-->
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -106,10 +109,11 @@
                     <div class="shoping__checkout">
                         <h5>Tiền giỏ hàng</h5>
                         <ul>
-                            <li>Tổng tiền sản phẩm<span>$454.98</span></li>
-                            <li>Tổng tiền thanh toán <span>$454.98</span></li>
+                            <li>Tổng tiền sản phẩm<span th:text="${subTotal}+' VNĐ'" > </span></li>
+                            <li>Phí vận chuyển <span>30.000 VNĐ</span> </li>
+                            <li>Tổng tiền thanh toán <span th:text="${subTotal + 30000 }+' VNĐ'"></span></li>
                         </ul>
-                        <a href="checkout.html" class="primary-btn">TIẾN HÀNH ĐẶT HÀNG</a>
+                        <a th:href="@{/checkout}" class="primary-btn">TIẾN HÀNH ĐẶT HÀNG</a>
                     </div>
                 </div>
             </div>
