--- a/src/main/resources/templates/shop-details.html
+++ b/src/main/resources/templates/shop-details.html
@@ -35,6 +35,7 @@
 <!--            Hiển thị chi tiết sản phẫm-->
 
             <form th:action="@{/add-to-cart}" method="post">
+                <div class="row">
             <div class="col-lg-6 col-md-6">
                 <div class="product__details__pic">
                     <!--                     Hiển thị hình ảnh lớn-->
@@ -75,6 +76,7 @@
                     </ul>
                 </div>
             </div>
+                </div>
             </form>
 
 <!--            kết thúc chi tiết sản phẩm-->
